--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,8 +21,9 @@
     <a href="{{ url_for('departments.create_department_page') }}" class="btn btn-info mt-2">Create New Department</a>
     <a href="{{ url_for('departments.departments') }}" class="btn btn-info mt-2">List All Departments</a>
 
-    <!-- Add link for creating titles -->
+    <!-- Add link for listing titles -->
     <h2 class="mt-4">Titles:</h2>
+    <a href="{{ url_for('titles.list_titles') }}" class="btn btn-info mt-2">List All Titles</a>
     <a href="{{ url_for('titles.create_title') }}" class="btn btn-info mt-2">Create New Title</a>
 
 {% endblock %}
